Fix posting replies on news items.